# arthur-imgreco

./: .env.example  .gitignore  Dockerfile  README.md  SUCCESS.md  TESTING.md  ai-briefing.md  docker-compose.yml  pyproject.toml  test_clip.py  test_full_system.py  test_system.sh
docker/nginx/: nginx.conf  nginx.prod.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: DEVELOPER_GUIDE.md  ai-plan.md  ai-result.md
scripts/: backup-qdrant.sh  deploy.sh
src/: __init__.py  _create_indices.py  main.py
src/api/: __init__.py  health.py  image_management.py  index.py  match.py  models.py  similarity_search.py  status.py  system_management.py  v1.py
src/arthur_imgreco/: main.py
src/arthur_imgreco/api/: health.py  image_management.py  legacy.py  models.py  similarity_search.py  system_management.py  v1.py  v1_old.py
src/arthur_imgreco/core/: __init__.py  config.py  logging.py
src/arthur_imgreco/ml/: clip_service.py  pipeline.py  vector_db.py
src/core/: cache.py  config.py  exceptions.py  hierarchical_ids.py  logging.py  models.py  responses.py  services.py
src/ml/: __init__.py  clip_service.py  pipeline.py  vector_db.py
tests/: test_add_image_endpoint.py  test_batch_endpoint.py  test_clip.py  test_full_system.py  test_performance.py  test_system.py  test_system.sh  test_uuid_endpoints.py  test_vector_db.py
